--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -136,7 +136,7 @@
 </main> --->
 
 <main class="main-container">
-    <!--<header class="header">
+    <header class="header">
       <!--<div class="header__navigation">
         <img class="header__menu" src="./images/icon-menu.svg" alt="menu icon">
         <img class="header__logo" src="./images/logo.svg" alt="logo">
@@ -175,10 +175,10 @@
           <img src="./images/icon-cart.svg" alt="">
         </div>
         <img class="header__avatar" src="./images/image-avatar.png" alt="">
-      </div>--
-    </header>-->
+      </div>-->
+    </header>
 
-    <section class="content">
+    <section class="content-product-detail">
       <article class="gallery">
         <div class="gallery__image-container">
           <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
