correccion de css en botones

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -136,7 +136,7 @@
 </main> --->
 
 <main class="main-container">
-    <header class="header">
+    <!--<header class="header">
       <!--<div class="header__navigation">
         <img class="header__menu" src="./images/icon-menu.svg" alt="menu icon">
         <img class="header__logo" src="./images/logo.svg" alt="logo">
@@ -175,8 +175,8 @@
           <img src="./images/icon-cart.svg" alt="">
         </div>
         <img class="header__avatar" src="./images/image-avatar.png" alt="">
-      </div>-->
-    </header>
+      </div>--
+    </header>-->
 
     <section class="content-product-detail">
       <article class="gallery">
@@ -207,7 +207,7 @@
             <input class="input__number" type="text" value="0">
             <img class="input__plus" src="/images/icon-plus.svg" alt="plus">
           </div>
-          <button class="btn btn-primary"> <img src="/images/icon-cart-white.svg" alt=""> Add to cart</button>
+          <button class="details__button"> <img src="/images/icon-cart-white.svg" alt=""> Add to cart</button>
         </div>
       </article>
     </section>
