--- a/public/css/style.css
+++ b/public/css/style.css
@@ -93,6 +93,7 @@ textarea:not([rows]) {
 /*CSS RESET END*/
 
 
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
@@ -394,7 +395,7 @@ main {
 }
 
 .btn {
-  display: inline-block;
+  /*display: inline-block;
   width: 100%;
   min-width: 50px;
   max-width: 150px;
@@ -409,7 +410,19 @@ main {
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
+*/
+background-color: #6f63c7;
+  width: 100%;
+  height: 57px;
+  border-radius: 8px;
+  border: none;
+  color: hsl(0deg, 0%, 100%);
+  font-size: 0.9em;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }
 
 .btn-accent {
@@ -420,8 +433,8 @@ main {
 
 .btn-accent:hover {
   color: #fff;
-  background-color: #0056b3;
-  border-color: #004085;
+  background-color: #363062;
+  border-color: #363062;
 }
 
 /* barra buscador */
@@ -589,7 +602,7 @@ footer section{
 }
 .header__avatar:hover {
   cursor: pointer;
-  border: 2px solid hsl(26deg, 100%, 55%);
+  border: 2px solid #6f63c7;
   border-radius: 50%;
 }
 
@@ -610,7 +623,7 @@ footer section{
   padding-top: 42px;
 }
 .navbar__link:hover {
-  border-bottom: 4px solid hsl(26deg, 100%, 55%);
+  border-bottom: 4px solid #6f63c7;
 }
 @media (min-width: 1115px) {
   .navbar {
@@ -710,7 +723,7 @@ footer section{
 }
 .gallery__thumnail:hover {
   cursor: pointer;
-  border: 2px solid hsl(26deg, 100%, 55%);
+  border: 2px solid #6f63c7;
 }
 @media (min-width: 1115px) {
   .gallery {
@@ -729,7 +742,7 @@ footer section{
   padding: 24px;
 }
 .details__company {
-  color: hsl(26deg, 100%, 55%);
+  color: #6f63c7;
   text-transform: uppercase;
   font-size: 0.8em;
   letter-spacing: 1px;
@@ -761,7 +774,7 @@ footer section{
 .details__discount {
   font-size: 0.5em;
   background-color: hsl(25deg, 100%, 94%);
-  color: hsl(26deg, 100%, 55%);
+  color: #6f63c7;
   padding: 4px;
   border: 4px;
 }
@@ -771,7 +784,7 @@ footer section{
   text-decoration: line-through;
 }
 .details__button {
-  background-color: hsl(26deg, 100%, 55%);
+  background-color: #6f63c7;
   width: 100%;
   height: 57px;
   border-radius: 8px;
@@ -882,7 +895,7 @@ footer section{
   cursor: pointer;
 }
 .cart-modal__chekount {
-  background-color: hsl(26deg, 100%, 55%);
+  background-color: #6f63c7;
   width: 100%;
   height: 57px;
   border-radius: 8px;
@@ -946,7 +959,7 @@ footer section{
 }
 .modal-gallery__thumnail:hover {
   cursor: pointer;
-  border: 2px solid hsl(26deg, 100%, 55%);
+  border: 2px solid #6f63c7;
 }
 .modal-gallery__previus {
   background-color: hsl(0deg, 0%, 100%);
