--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -50,7 +50,7 @@
             <p class="product__price">$<%= product.price %>
             </p>
             <a href="/products/<%= product.productId %>"><i class="fas fa-info-circle"></i>Ver detalles</a>
-            <button class="btn btn-primary">Agregar al
+            <button class="details__button">Agregar al
               <span>
                 <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
               </span>
