--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -3,9 +3,9 @@
 
 <%- include('../partials/head',{'titulo':datos.titulo}) %>
 
-<body>
+  <body>
     <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
-  <!---<main class="cont air-v">
+      <!---<main class="cont air-v">
     <div class="breadcrumb">
         <a href="/" itemprop="itemListElement" typeof="ListItem">
             <span itemprop="item">
@@ -135,8 +135,8 @@
     </div>
 </main> --->
 
-<main class="main-container">
-    <!--<header class="header">
+      <main class="main-container">
+        <!--<header class="header">
       <!--<div class="header__navigation">
         <img class="header__menu" src="./images/icon-menu.svg" alt="menu icon">
         <img class="header__logo" src="./images/logo.svg" alt="logo">
@@ -154,7 +154,7 @@
 
       </div> -->
 
-      <!-- inicio modal navbar --
+        <!-- inicio modal navbar --
       <div class="modal-navbar__background">
         <nav class="modal-navbar">
           <img class="modal-navbar__close-icon" src="./images/icon-close.svg" alt="" srcset="">
@@ -178,84 +178,95 @@
       </div>--
     </header>-->
 
-    <section class="content-product-detail">
-      <article class="gallery">
-        <div class="gallery__image-container">
-          <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
-          <img class="gallery__next" src="/images/icon-next.svg" alt="next">
-        </div>
-        <div class="gallery__thumnails">
-          <% if (product.images) { %>
-            <% Object.values(product.images).forEach((imagen,index) => { %>
-              <img id="<%= index %>" class="gallery__thumnail" src="<%= imagen %>" alt="thumnail" href="/products/<%= product.productId %>">
-            <% }) %>
-          <% } %>
-         
-        </div>
-      </article>
+        <section class="content-product-detail">
+          <article class="gallery">
+            <div class="gallery__image-container">
+              <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
+              <img class="gallery__next" src="/images/icon-next.svg" alt="next">
+            </div>
+            <div class="gallery__thumnails">
+              <% if (product.images) { %>
+                <% Object.values(product.images).forEach((imagen,index)=> { %>
+                  <img id="<%= index %>" class="gallery__thumnail" src="<%= imagen %>" alt="thumnail"
+                    href="/products/<%= product.productId %>">
+                  <% }) %>
+                    <% } %>
 
-      <article class="details">
-        <h2 class="details__company"> <%= product.category %></h2>
-        <h2 class="details__title"> <%= product.name %></h2>
-        <p class="details__description">These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-        <div class="details__prices">
-          <p class="details__now">$<%= product.price %></p>
-        </div>
-        <div class="details__product-quantity">
-          <div class="input">
-            <img class="input__minus" src="/images/icon-minus.svg" alt="minus">
-            <input class="input__number" type="text" value="0">
-            <img class="input__plus" src="/images/icon-plus.svg" alt="plus">
+            </div>
+          </article>
+
+          <article class="details">
+            <h2 class="details__company">
+              <%= product.category %>
+            </h2>
+            <h2 class="details__title">
+              <%= product.name %>
+            </h2>
+            <p class="details__description">These low-profile sneakers are your perfect casual wear companion. Featuring
+              a durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+            <div class="details__prices">
+              <p class="details__now">$<%= product.price %>
+              </p>
+            </div>
+            <div class="details__product-quantity">
+              <div class="input">
+                <img class="input__minus" src="/images/icon-minus.svg" alt="minus">
+                <input class="input__number" type="text" value="0">
+                <img class="input__plus" src="/images/icon-plus.svg" alt="plus">
+              </div>
+              <button class="details__button"> Agregar al
+                <span>
+                  <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+                </span></button>
+            </div>
+          </article>
+        </section>
+
+        <!-- inicio cart modal -->
+        <div class="cart-modal">
+          <p class="cart-modal__title">Cart</p>
+          <div class="cart-modal__chekout-container">
+            <div class="cart-modal__details-container">
+              <img class="cart-modal__image" src="/images/<%= product.productId %>" alt="">
+              <div>
+                <p class="cart-modal__product">Autumn Limited Edition...</p>
+                <p class="cart-modal__price">$125 x3 <span>$375.00</span> </p>
+              </div>
+              <img class="cart-modal__delete" src="/images/icon-delete.svg" alt="delete">
+            </div>
+            <button class="cart-modal__chekount">Checkout</button>
           </div>
-          <button class="details__button"> <img src="/images/icon-cart-white.svg" alt=""> Add to cart</button>
         </div>
-      </article>
-    </section>
+        <!-- fin cart modal -->
 
-    <!-- inicio cart modal -->
-    <div class="cart-modal">
-      <p class="cart-modal__title">Cart</p>
-      <div class="cart-modal__chekout-container">
-        <div class="cart-modal__details-container">
-          <img class="cart-modal__image" src="/images/<%= product.productId %>" alt="">
-          <div>
-            <p class="cart-modal__product">Autumn Limited Edition...</p>
-            <p class="cart-modal__price">$125 x3 <span>$375.00</span> </p>
+
+      </main>
+      <!-- inicio gallery modal -->
+      <div class="modal-gallery__background">
+        <article class="modal-gallery">
+          <div class="modal-gallery__close-container">
+            <img class="modal-gallery__close" src="/images/icon-close.svg" alt="icon close">
           </div>
-          <img class="cart-modal__delete" src="/images/icon-delete.svg" alt="delete">
-        </div>
-        <button class="cart-modal__chekount" >Checkout</button>
-      </div>
-    </div>
-    <!-- fin cart modal -->
+          <div class="modal-gallery__image-container">
+            <img class="modal-gallery__previus" src="/images/icon-previous.svg" alt="previus">
+            <img class="modal-gallery__next" src="/images/icon-next.svg" alt="next">
+          </div>
+          <div class="modal-gallery__thumnails">
+            <% if (product.images) { %>
+              <% Object.values(product.images).forEach((imagen,index)=> { %>
+                <img id="m<%= index %>" class="modal-gallery__thumnail" src="<%= imagen %>" alt="thumnail"
+                  href="/products/<%= product.productId %>">
 
-    
-  </main>
-  <!-- inicio gallery modal -->
-  <div class="modal-gallery__background">
-    <article class="modal-gallery">
-      <div class="modal-gallery__close-container">
-        <img class="modal-gallery__close" src="/images/icon-close.svg" alt="icon close">
-      </div>
-      <div class="modal-gallery__image-container">
-        <img class="modal-gallery__previus" src="/images/icon-previous.svg" alt="previus">
-        <img class="modal-gallery__next" src="/images/icon-next.svg" alt="next">
-      </div>
-      <div class="modal-gallery__thumnails">
-        <% if (product.images) { %>
-          <% Object.values(product.images).forEach((imagen,index) => { %>
-            <img id="m<%= index %>" class="modal-gallery__thumnail" src="<%= imagen %>" alt="thumnail" href="/products/<%= product.productId %>">
-            
-          <% }) %>
-        <% } %>
-      
-      </div>
-    </article>
-  </div>
-  <!-- fin gallery modal -->
-<%- include('../partials/footer',{'pie':datos.pie}) %>
+                <% }) %>
+                  <% } %>
 
-<%- include('../partials/script') %>
-</body>
+          </div>
+        </article>
+      </div>
+      <!-- fin gallery modal -->
+      <%- include('../partials/footer',{'pie':datos.pie}) %>
+
+        <%- include('../partials/script') %>
+  </body>
 
 </html>
