subiendo imagen de gallery en modo inline

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -180,7 +180,7 @@
 
         <section class="content-product-detail">
           <article class="gallery">
-            <div class="gallery__image-container">
+            <div class="gallery__image-container" style="background-image: url('<%= product.image %>');"></div>
               <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
               <img class="gallery__next" src="/images/icon-next.svg" alt="next">
             </div>
