--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -180,7 +180,7 @@
 
         <section class="content-product-detail">
           <article class="gallery">
-            <div class="gallery__image-container" style="background-image: url('<%= product.image %>');"></div>
+            <div class="gallery__image-container" style="background-image: url('<%= product.image %>');background-size: cover;width: 100%;background-position-y: -35px;background-repeat: no-repeat;height: 300px;"></div>
               <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
               <img class="gallery__next" src="/images/icon-next.svg" alt="next">
             </div>
