--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -180,11 +180,11 @@
 
         <section class="content-product-detail">
           <article class="gallery">
-            <div class="gallery__image-container" style="background-image: url('<%= product.image %>');background-size: cover;width: 100%;background-position-y: -35px;background-repeat: no-repeat;height: 300px;"></div>
-              <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
-              <img class="gallery__next" src="/images/icon-next.svg" alt="next">
+            <div class="gallery__image-container" style="background-image: url('<%= product.image %>');"> </div>
+              <!--<img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
+              <img class="gallery__next" src="/images/icon-next.svg" alt="next">-->
             </div>
-            <div class="gallery__thumnails">
+            <!--<div class="gallery__thumnails">
               <% if (product.images) { %>
                 <% Object.values(product.images).forEach((imagen,index)=> { %>
                   <img id="<%= index %>" class="gallery__thumnail" src="<%= imagen %>" alt="thumnail"
@@ -192,7 +192,7 @@
                   <% }) %>
                     <% } %>
 
-            </div>
+            </div>-->
           </article>
 
           <article class="details">
@@ -202,8 +202,7 @@
             <h2 class="details__title">
               <%= product.name %>
             </h2>
-            <p class="details__description">These low-profile sneakers are your perfect casual wear companion. Featuring
-              a durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+            <p class="details__description"><%= product.description %></p>
             <div class="details__prices">
               <p class="details__now">$<%= product.price %>
               </p>
@@ -222,51 +221,10 @@
           </article>
         </section>
 
-        <!-- inicio cart modal -->
-        <div class="cart-modal">
-          <p class="cart-modal__title">Cart</p>
-          <div class="cart-modal__chekout-container">
-            <div class="cart-modal__details-container">
-              <img class="cart-modal__image" src="/images/<%= product.productId %>" alt="">
-              <div>
-                <p class="cart-modal__product">Autumn Limited Edition...</p>
-                <p class="cart-modal__price">$125 x3 <span>$375.00</span> </p>
-              </div>
-              <img class="cart-modal__delete" src="/images/icon-delete.svg" alt="delete">
-            </div>
-            <button class="cart-modal__chekount">Checkout</button>
-          </div>
-        </div>
-        <!-- fin cart modal -->
-
-
-      </main>
-      <!-- inicio gallery modal -->
-      <div class="modal-gallery__background">
-        <article class="modal-gallery">
-          <div class="modal-gallery__close-container">
-            <img class="modal-gallery__close" src="/images/icon-close.svg" alt="icon close">
-          </div>
-          <div class="modal-gallery__image-container">
-            <img class="modal-gallery__previus" src="/images/icon-previous.svg" alt="previus">
-            <img class="modal-gallery__next" src="/images/icon-next.svg" alt="next">
-          </div>
-          <div class="modal-gallery__thumnails">
-            <% if (product.images) { %>
-              <% Object.values(product.images).forEach((imagen,index)=> { %>
-                <img id="m<%= index %>" class="modal-gallery__thumnail" src="<%= imagen %>" alt="thumnail"
-                  href="/products/<%= product.productId %>">
-
-                <% }) %>
-                  <% } %>
-
-          </div>
-        </article>
-      </div>
-      <!-- fin gallery modal -->
+        
+      </body>
       <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-        <%- include('../partials/script') %>
-  </body>
+      <%- include('../partials/script') %>
 
 </html>
