centrado de login y user archivo css

--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -5,8 +5,8 @@
 
 <body>
   <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
-  <main>
-    <div class="account">
+  <main class="main-box">
+    <div class="account ">
 
       <div class="item">
         <div style="display:none" class="item-login">
