--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,10 +4,10 @@
 
   <body>
     <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
-    <main>
+    <main class="main-box">
 
-      <div class="account">
-        <div class="item">
+      <div class="account" >
+        <div class="item" >
           <!-- activo mensaje si hace post -->
           <% if(datos.msg){ %>
             <div class="alert alert-success" role="alert">
