--- a/public/css/style.css
+++ b/public/css/style.css
@@ -351,14 +351,19 @@ main {
 }
 
 /* register */
+
+.main-box{
+  display: flex; justify-content: center; align-items: center;
+}
+
 .account {
   width: 100%;
-  max-width: 400px;
+  max-width: 600px;
   background-color: #fff;
   padding: 50px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  
+   
 }
 
 .cuentas {
