--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -87,7 +87,7 @@
               </div>
             
               <div class="form-group" style="display: flex; align-items: center;width: 200px;">
-                <input style="margin-right: 5px;" type="checkbox" name="recordar" id="recordar" value="recordar">
+                <input style="margin-right: 5px;" type="checkbox" name="recordar" id="recordar">
                 <span style="font-size: 12px;">Mantenerme logeado</span>
               </div>
             
