--- a/src/views/test/movies.ejs
+++ b/src/views/test/movies.ejs
@@ -21,7 +21,7 @@
     <fieldset>
         <legend>Buscador FindOne</legend>
         <form action="/test/movies" method="post">
-            <input type="text" name="title" placeholder="type title">
+            <input type="text" name="title" placeholder="ingrese titulo exacto">
             <input type="submit" name="btnEnviar" value="FindOne">
         </form>
     </fieldset>
@@ -29,7 +29,7 @@
     <fieldset>
         <legend>Buscador FindAll con String</legend>
         <form action="/test/findByString" method="post">
-            <input type="text" name="title" placeholder="type title">
+            <input type="text" name="title" placeholder="Ingres titulo o parte del titulo">
             <input type="submit" name="btnEnviar" value="FindAll String">
         </form>
     </fieldset>
