--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -25,7 +25,7 @@
                 <h4>Datos de Acceso</h4>
               </div>
               
-              <form action="/users/register" id="formRegister" method="post" class="formRegister">
+              <form action="/users/register" id="formRegister" method="post" class="formRegister" enctype="multipart/form-data">
                 <div class="form-group">
                   <input class="form-input datos" type="email" id="email" name="email" required placeholder="Email" value="<%= locals.old && old.email %>">
                   <% if(locals.errors && errors.email){ %>
@@ -77,6 +77,13 @@
                   <% } %>
                 </div>
                 <input type="hidden" id="express" name="express" value="0">
+
+                <div class="row_titulo">
+                  <h4>Imágen de perfil</h4>
+                </div>
+                <div class="form-group ">
+                  <input type="file" name="avatar" id="avatar" accept="image/png, image/jpeg">
+                </div>
 
             </div>
             <div class="cta">
