--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -10,78 +10,77 @@
       <div class="breadcrumb">
         <a href="/">HOME</a> <span class="sep"> /CARRITO</span>
       </div>
-      <div role="alert" id="success" style="display:none"><i class="fa fa-shopping-cart" aria-hidden="true"></i> Carrito
-        actualizado</div>
-      <div role="alert" id="enviogratis" style="display:none"><i class="fa fa-shopping-cart"
-          aria-hidden="true"></i>Envio gratis aplicado.</div>
-      <div role="alert" id="danger" style="display:none"><i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-        Hubo un error al eliminar el producto</div>
-      <div id="dangercupon" style="display:none"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Cupon
-        inválido</div>
-      <div class="cart air">
-        <div class="item end" style="padding:0;">
-          <div class="cta" style="width:100%;justify-content: flex-end;">
-            <button onclick="shareCart();" class="btn btn-outline btn-sm" name="share" id="share">Compartir
-              carrito</button>
-            <input class="btn btn-outline" style="display:none;width:100%; " id="texto">
-            <button class="btn btn-accent" style="display:none" id="copiar">Copiar</button>
-          </div>
-        </div>
-        <div class="item">
-          <div class="image">
-            <a href="#"><img src="/images/products/foto1.jpg" alt="aqui texto de imagen"></a>
-          </div>
-          <div class="meta">
-            <div class="title"><a href="#">
-                <h2>PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</h2>
-              </a></div>
-            <div class="options">
-              <ul>
-                <li><a style="cursor:pointer" onclick="quickAddCart(11398,0)">Eliminar</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="qty">
-            <form action="javascript:void(0)" id="cartUpdate11398">
-              <input type="hidden" name="idprod" value="11398">
-              <button onclick="decrementValue('11398');cartUpdate(11398);"><i class="fas fa-minus"></i></button>
-              <input style="width: 60px;text-align: center;" onchange="cartUpdate(11398);" class="form-input" type="number" step="1" min="0" max="20" name="quantity" id="prod-qty11398" value="1" title="Cantidad" inputmode="numeric">
-              <button onclick="incrementValue('11398');cartUpdate(11398);"><i class="fas fa-plus"></i></button>
-            </form>
-          </div>
-          <div class="price">$235.569,93</div>
-        </div>
-        <div class="item cart-opc">
-          <div class="qty-products">
-            <div class="color-accent">Productos</div>
-            <div>1</div>
-          </div>
-          <div class="subtotal">
-            <div class="color-accent">Subtotal</div>
-            <div>$<span id="subtotal">235.569,93</span></div>
-          </div>
-          <div id="cuponsection" class="subtotal" style="display:none">
-            <div class="color-accent">Cupón</div>
-            <div>- $<span id="cupontext">0</span></div>
-          </div>
-          <span hidden="" id="subtotal2">235569.93</span>
-          <span hidden="" id="origsubtotal">235569.93</span>
-          <span hidden="" id="pagomet">1</span>
-          <span hidden="" id="totallista">259126.923</span>
-          <span hidden="" id="origtotallista">259126.923</span>
-          <div class="total">
-            <div class="color-accent">Total</div>
-            <div>$<span id="total">235.569,93</span></div>
-          </div>
-        </div>
-        <div class="item end">
-          <div class="cta">
-            <button data-modal="#vaciar" class="btn btn-outline" name="modal">Vaciar carrito</button>
-            <button data-modal="#coupon" class="btn btn-outline" name="modal">Tengo un cupón</button>
-            <button data-modal="#paymethods" class="btn btn-accent" name="modal">Comprar</button>
-          </div>
-        </div>
-      </div>
+
+      <% if (infoCarrito!=null) { %>
+              <h3>traer aqui la info del carrito</h3>
+              <div class="cart air">
+                <div class="item end" style="padding:0;">
+                  <div class="cta" style="width:100%;justify-content: flex-end;">
+                    <button onclick="shareCart();" class="btn btn-outline btn-sm" name="share" id="share">Compartir
+                      carrito</button>
+                    <input class="btn btn-outline" style="display:none;width:100%; " id="texto">
+                    <button class="btn btn-accent" style="display:none" id="copiar">Copiar</button>
+                  </div>
+                </div>
+                <div class="item">
+                  <div class="image">
+                    <a href="#"><img src="/images/products/foto1.jpg" alt="aqui texto de imagen"></a>
+                  </div>
+                  <div class="meta">
+                    <div class="title"><a href="#">
+                        <h2>PC ARMADA AMD ATHLON 3000G + 8GB + 240GB + KIT</h2>
+                      </a></div>
+                    <div class="options">
+                      <ul>
+                        <li><a style="cursor:pointer" onclick="quickAddCart(11398,0)">Eliminar</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="qty">
+                    <form action="javascript:void(0)" id="cartUpdate11398">
+                      <input type="hidden" name="idprod" value="11398">
+                      <button onclick="decrementValue('11398');cartUpdate(11398);"><i class="fas fa-minus"></i></button>
+                      <input style="width: 60px;text-align: center;" onchange="cartUpdate(11398);" class="form-input" type="number" step="1" min="0" max="20" name="quantity" id="prod-qty11398" value="1" title="Cantidad" inputmode="numeric">
+                      <button onclick="incrementValue('11398');cartUpdate(11398);"><i class="fas fa-plus"></i></button>
+                    </form>
+                  </div>
+                  <div class="price">$235.569,93</div>
+                </div>
+                <div class="item cart-opc">
+                  <div class="qty-products">
+                    <div class="color-accent">Productos</div>
+                    <div>1</div>
+                  </div>
+                  <div class="subtotal">
+                    <div class="color-accent">Subtotal</div>
+                    <div>$<span id="subtotal">235.569,93</span></div>
+                  </div>
+                  <div id="cuponsection" class="subtotal" style="display:none">
+                    <div class="color-accent">Cupón</div>
+                    <div>- $<span id="cupontext">0</span></div>
+                  </div>
+                  <span hidden="" id="subtotal2">235569.93</span>
+                  <span hidden="" id="origsubtotal">235569.93</span>
+                  <span hidden="" id="pagomet">1</span>
+                  <span hidden="" id="totallista">259126.923</span>
+                  <span hidden="" id="origtotallista">259126.923</span>
+                  <div class="total">
+                    <div class="color-accent">Total</div>
+                    <div>$<span id="total">235.569,93</span></div>
+                  </div>
+                </div>
+                <div class="item end">
+                  <div class="cta">
+                    <button data-modal="#vaciar" class="btn btn-outline" name="modal">Vaciar carrito</button>
+                    <button data-modal="#coupon" class="btn btn-outline" name="modal">Tengo un cupón</button>
+                    <button data-modal="#paymethods" class="btn btn-accent" name="modal">Comprar</button>
+                  </div>
+                </div>
+              </div>
+      <% }else{ %>
+              <h3>Estamos trabajando esta parte para cuando no encuentre objetos en el carrito</h3>
+      <% } %>
+      
     </div>
   </main>
 
