--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -25,7 +25,7 @@
                 <h4>Datos de Acceso</h4>
               </div>
               
-              <form action="/users/register" id="formRegister" method="post" class="formRegister" enctype="multipart/form-data">
+              <form action="/users/register" id="formRegister" method="post" class="formRegister">
                 <div class="form-group">
                   <input class="form-input datos" type="email" id="email" name="email" required placeholder="Email" value="<%= locals.old && old.email %>">
                   <% if(locals.errors && errors.email){ %>
