subiendo usuarioRouter y usuarioController, tambien ubicando sus html donde corresponden

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,17 +5,7 @@
     <section class="container">
     </section>
     <section class="page">
-        
-        <div class="admin-flotante">
-            <ul>
-                <li>
-                    <a href="crear_produto.html">
-                        <img src="/images/iconos/plus.png">
-                        <span>Agregar Producto</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
+        <%- include('./partials/acciones_admin') %>
         <%- include('./partials/headers') %>
         <main class="main">
             <div class="contenedor-video">
