--- a/src/views/partials/headers.ejs
+++ b/src/views/partials/headers.ejs
@@ -43,19 +43,19 @@
                 </a>
             </li>
             <li>
-                <a href="quienes_somos.html"  class="header-menu-link">
+                <a href="/nosotros"  class="header-menu-link">
                     <i class="fa-solid fa-users"></i> Quiénes somos
                 </a>
             </li>
             
             <li>
-                <a href="contacto.html"  class="header-menu-link">
+                <a href="/usuarios/contacto"  class="header-menu-link">
                     <i class="fa-solid fa-envelope"></i> Contactarnos
                 </a>
             </li>
             
             <li>
-                <a href="login.html"  class="header-menu-link">
+                <a href="/usuarios/login"  class="header-menu-link">
                     <i class="fa-solid fa-user"></i> Login/Registrarse
                 </a>
             </li>
