completando los demas controller y enrutadores y corrigiendo sus rutas en las html

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -23,7 +23,7 @@
                 </div>
                 <section class="lista-de-productos">
                     <article class="tarjeta-producto">
-                        <a href="producto_detalle.html">
+                        <a href="/productos/detalle">
                             <div class="tarjeta-producto-imagen">
                                 <img src="/images/productos/etc_recipe_yellow_i00.png">
                             </div>
