--- a/src/views/partials/acciones_admin.ejs
+++ b/src/views/partials/acciones_admin.ejs
@@ -1,7 +1,7 @@
 <div class="admin-flotante">
     <ul>
         <li>
-            <a href="crear_produto.html">
+            <a href="/admin/crear_producto">
                 <img src="/images/iconos/plus.png">
                 <span>Agregar Producto</span>
             </a>
