--- a/src/views/partials/headers.ejs
+++ b/src/views/partials/headers.ejs
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="header-top">
         <div class="header-top-left">
-            <a href="index.html"><img src="/images/fondos/mamon.png"></a>
+            <a href="/"><img src="/images/fondos/mamon.png"></a>
             <h3>Merchant of Mammon</h3>
         </div>
         <div class="server-online">
@@ -12,7 +12,7 @@
             </div>
         </div>
         <div class="header-top-right">
-            <a href="perfil.html">
+            <a href="/usuarios/perfil">
                 <div class="header-info-avatar">
                     
                     <span class="header-info-avatar-usuario">MasterDjmov</span>
@@ -38,7 +38,7 @@
                 </a>
             </li>
             <li>
-                <a href="buscador_items.html"  class="header-menu-link">
+                <a href="/productos/buscador"  class="header-menu-link">
                     <i class="fa-solid fa-star"></i> Buscador de Items
                 </a>
             </li>
@@ -62,7 +62,7 @@
             
         </ul>
         <div class="tiene-carrito">
-            <a href="carrito.html"  class="tiene-carrito-link">
+            <a href="/productos/carrito"  class="tiene-carrito-link">
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </div>
