--- a/src/views/productos/carrito.ejs
+++ b/src/views/productos/carrito.ejs
@@ -1,101 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="El Almacen L2: Store de Prueba para el l2j de Interlude"/>
-    <link rel="icon" href="img/logo_l2.png" type="image/png" />
-
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
-    <script src="https://kit.fontawesome.com/d46088808a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/estilo.css">
-    <title>Index</title>
-</head>
+    <%- include('../partials/head') %>
 <body>
     <section class="container"></section>
     <section class="page">
-        <div class="admin-flotante">
-            <ul>
-                <li>
-                    <a href="crear_produto.html">
-                        <img src="img/plus.png">
-                        <span>Agregar Producto</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <header class="header">
-            <div class="header-top">
-                <div class="header-top-left">
-                    <a href="index.html"><img src="img/mamon.png"></a>
-                    <h3>Merchant of Mammon</h3>
-                </div>
-                <div class="server-online">
-                    <div class="online-dot"></div>
-                    <div class="info-server">
-                        <span class="online-text">Online:</span>
-                        <span class="online-count">1874</span>
-                    </div>
-                </div>
-                <div class="header-top-right">
-                    <a href="perfil.html">
-                        <div class="header-info-avatar">
-                            
-                            <span class="header-info-avatar-usuario">MasterDjmov</span>
-                            <img class="header-avatar" src="/img/avatar-male.jpg">
-                        </div>
-                    </a>
-                </div>
-            </div>
-            <div class="header-bottom">
-                <ul class="header-menu-nav">
-                    <li class="header-menu-home oculto">
-                        <a href="#"  class="header-menu-link">
-                            <i class="fa-solid fa-home"> Inicio</i>
-                        </a>
-                    </li>
-                    <li class="header-menu-search oculto">
-                        <input type="search" name="buscar" placeholder="Buscar...">
-                        <button class="btnsearch"><i class="fa-solid fa-search"></i></button>
-                    </li>
-                    <li>
-                        <a href="index.html#venta-compra"  class="header-menu-link">
-                            <i class="fa-solid fa-exchange-alt"></i> Venta/Compra
-                        </a>
-                    </li>
-                    <li>
-                        <a href="buscador_items.html"  class="header-menu-link">
-                            <i class="fa-solid fa-star"></i> Buscador de Items
-                        </a>
-                    </li>
-                    <li>
-                        <a href="quienes_somos.html"  class="header-menu-link">
-                            <i class="fa-solid fa-users"></i> Quiénes somos
-                        </a>
-                    </li>
-                    
-                    <li>
-                        <a href="contacto.html"  class="header-menu-link">
-                            <i class="fa-solid fa-envelope"></i> Contactarnos
-                        </a>
-                    </li>
-                    
-                    <li>
-                        <a href="login.html"  class="header-menu-link">
-                            <i class="fa-solid fa-user"></i> Login/Registrarse
-                        </a>
-                    </li>
-                    
-                </ul>
-                <div class="tiene-carrito">
-                    <a href="carrito.html"  class="tiene-carrito-link">
-                        <i class="fas fa-shopping-cart"></i>
-                    </a>
-                </div>
-               
-            </div>
-            
-        </header>
+        <%- include('../partials/acciones_admin') %>
+        <%- include('../partials/headers') %>
         
         <main class="main">
             <!-- Separador y Detalles del Producto -->
@@ -109,7 +19,7 @@
                 <div class="carrito-vacio ocultarlo">
                     <h2>Tu carrito está vacío</h2>
                     <p>Agrega productos para comenzar</p>
-                    <img src="img/carrito_vacio_nuevo.webp">
+                    <img src="/images/fondos/carrito_vacio_nuevo.webp">
                 </div>
             </section>
             <section class="control-carrito">
@@ -120,7 +30,7 @@
                         <!-- Producto 1 -->
                         <li class="carrito-item">
                             <div class="carrito-imagen">
-                                <img src="img/productos/shield_composite_shield_i00.png" alt="Archangel Sword">
+                                <img src="/images/productos/shield_composite_shield_i00.png" alt="Archangel Sword">
                             </div>
                             <div class="carrito-info">
                                 <div class="grupo-info">
@@ -144,7 +54,7 @@
                         <!-- Producto 2 -->
                         <li class="carrito-item">
                             <div class="carrito-imagen">
-                                <img src="img/productos/weapon_dual_sword_i00.png" alt="Dragon Claw">
+                                <img src="/images/productos/weapon_dual_sword_i00.png" alt="Dragon Claw">
                             </div>
                             <div class="carrito-info">
                                 <div class="grupo-info">
@@ -167,7 +77,7 @@
                         <!-- Producto 3 -->
                         <li class="carrito-item">
                             <div class="carrito-imagen">
-                                <img src="img/productos/weapon_sword_of_valhalla_i01.png" alt="Phoenix Bow">
+                                <img src="/images/productos/weapon_sword_of_valhalla_i01.png" alt="Phoenix Bow">
                             </div>
                             <div class="carrito-info">
                                 <div class="grupo-info">
@@ -241,33 +151,11 @@
             </section>
         </main>
         
-        
-        
-        <footer class="footer">
-            <section class="informacion-footer">
-                <div class="titulo-block">
-                    <h3>Nuestros Medios de Cobro</h3>
-                </div>
-                <div class="informacion-cobro">
-                    <img class="cobro-icono" src="img/medios_de_cobro/visa.svg">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/payu.svg">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/paypal.svg">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/maestro.png">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/mastercard.svg">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/mercadopago.png">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/deposito.png">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/naranja.png">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/rapipago.svg">
-                    <img class="cobro-icono"  src="img/medios_de_cobro/pagofacil.png">
-                </div>
-
-            </section>
-        </footer>
+        <%- include('../partials/footers') %>
     </section>
+
     <!-- script -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="js/funcionalidad.js"></script>
-    <script src="js/carrito.js"></script>
+    <%- include('../partials/scripts') %>
+    <script src="/js/carrito.js"></script>
 </body>
 </html>
