--- a/src/views/usuarios/login.ejs
+++ b/src/views/usuarios/login.ejs
@@ -14,7 +14,7 @@
                     <!-- Formulario de Login -->
                     <div class="login-form">
                         <h2>Iniciar Sesión</h2>
-                        <form id="form-login" action="login.html" method="post">
+                        <form id="form-login" action="/usuarios/autenticar" method="post">
                             <div class="form-group">
                                 <label for="login-nombre-personaje">Nombre del Personaje</label>
                                 <input type="text" id="login-nombre-personaje" name="nombre-personaje" required>
@@ -23,7 +23,7 @@
                                 <label for="login-clave">Clave</label>
                                 <input type="password" id="login-clave" name="clave" required>
                             </div>
-                            <button type="button" class="btn-login" id="login-btn">Iniciar Sesión</button>
+                            <button type="submit" class="btn-login" id="login-btn">Iniciar Sesión</button>
                         </form>
                     </div>
         
