subiendo imagenes nuevas y cambiando algunas relaciones

--- a/src/views/usuarios/contacto.ejs
+++ b/src/views/usuarios/contacto.ejs
@@ -14,7 +14,7 @@
                 <div class="separador"></div>
                 <h2>Contacto</h2>
                 <p>¿Tienes alguna consulta o reclamo? Llena el formulario y nos pondremos en contacto contigo a la brevedad.</p>
-                <form action="#" method="post" class="form-contacto">
+                <form action="/usuarios/contacto" method="post" class="form-contacto">
                     <div class="form-group">
                         <label for="nombre">Nombre Completo</label>
                         <input type="text" id="nombre" name="nombre" required>
