--- a/src/views/admin/crear_producto.ejs
+++ b/src/views/admin/crear_producto.ejs
@@ -6,7 +6,7 @@
     <section class="container"></section>
     <section class="page">
         <%- include('../partials/acciones_admin') %>
-        <%- include('../partials/headers') %>
+        <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
         
         <div class="separador"></div>
         <main class="main-editar-producto">
