--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,7 +6,7 @@
     </section>
     <section class="page">
         <%- include('./partials/acciones_admin') %>
-        <%- include('./partials/headers') %>
+        <%- include('./partials/headers',{ infoUsuario: infoUsuario }) %>
         <main class="main">
             <div class="contenedor-video">
                 <video id="intro-video" autoplay loop muted>
