--- a/src/views/usuarios/contacto.ejs
+++ b/src/views/usuarios/contacto.ejs
@@ -7,7 +7,7 @@
     <section class="container"></section>
     <section class="page">
         <%- include('../partials/acciones_admin') %>
-        <%- include('../partials/headers') %>
+        <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
         
         <main class="main">
             <section id="contacto" class="contacto">
